<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_plus"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/nav_settings"
            android:title="@string/setting" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_nav_logout"
            android:title="@string/Logout"/>

    </group>
    <group
        android:id="@+id/nav_footer">
        <item
            android:id="@+id/nav_log_version"
            android:title=""
            app:actionLayout="@layout/nav_footer"/>
    </group>
</menu>