<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/adapter_student_homework_viewContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/CustomCardView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_inner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:cardElevation="5dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/adapter_student_headLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:background="#E7F1EE">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="English"
                        android:textSize="@dimen/heading"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/textHeading" />


                </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="5"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/subject"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/textHeading"
                            android:gravity="center"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:textStyle="bold"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/textHeading"
                            android:gravity="center"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/starttime"
                            android:textStyle="bold"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/textHeading"
                            android:gravity="center"/>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/duration"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/textHeading"
                            android:gravity="center"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/minutes"
                                android:layout_weight="1"
                                android:textStyle="bold"
                                android:textColor="@color/textHeading"
                                android:gravity="center"/>
                        </LinearLayout>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/room"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/textHeading"
                            android:gravity="center"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="visible"
                            />
                    </LinearLayout>
                    </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>

