<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/addTask_dialog_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textHeading">

            <ImageView
                android:id="@+id/addTask_dialog_calenderIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_dashboard_pandingtask"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                app:tint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/addTask_dialog_calenderIcon"
                android:gravity="start|center"
                android:minHeight="40dp"
                android:padding="5dp"
                android:text="@string/task"
                android:textColor="@color/white"
                android:textSize="@dimen/primaryText"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/addTask_dialog_crossIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_close"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                app:tint="@color/white" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            app:boxStrokeColor="@color/textHeading"
            android:layout_height="wrap_content"
            android:textColorHint="@color/seperator"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/taskTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addTask_dialog_titleET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textHeading"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            app:boxStrokeColor="@color/textHeading"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColorHint="@color/seperator"
            android:layout_marginTop="10dp"
            android:hint="@string/selectDate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addTask_dialog_dateTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:editable="false"
                android:textColor="@color/textHeading"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <android.widget.Button
            android:id="@+id/addTask_dialog_submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:text="@string/submit"
            android:textStyle="bold"
            android:layout_marginBottom="50dp"
            android:background="@drawable/green_curve_border"/>
    </LinearLayout>


</LinearLayout>